src/snapshots/alma__parser__tests__expression_parser-55.snap
---
source: src/parser.rs
expression: "parse(\"{ Sneaky : 5 }\")"

---
Input:

{ Sneaky : 5 }

Result:

1:9: Expected '|' between the record and the fields to update (like this `{ record | field = 5 }`), but instead found: `:`

  1│  { Sneaky : 5 }
   │           ↑

Error {
    message: "1:9: Expected '|' between the record and the fields to update (like this `{ record | field = 5 }`), but instead found: `:`\n\n  1│  { Sneaky : 5 }\n   │           ↑",
    token: Token {
        kind: Colon,
        position: 9,
        end_position: 10,
        lexeme: ":",
        line: 1,
        column: 9,
        indent: 0,
    },
}
