src/snapshots/alma__parser__tests__expression_parser-59.snap
---
source: src/parser.rs
expression: "parse(\"{ x = 5 }\")"

---
Input:

{ x = 5 }

Result:

Node {
    start: 0,
    end: 9,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Record(
            [
                (
                    Node {
                        start: 2,
                        end: 3,
                        line: 1,
                        column: 2,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                            case: Camel,
                        },
                    },
                    Node {
                        start: 6,
                        end: 7,
                        line: 1,
                        column: 6,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ],
        ),
    },
}
