src/snapshots/alma__parser__tests__expression_parser-6.snap
---
source: src/parser.rs
expression: "parse(\"variableOne\")"

---
Input:

variableOne

Result:

Node {
    start: 0,
    end: 11,
    line: 1,
    column: 0,
    value: Identifier(
        "variableOne",
    ),
}
