src/snapshots/alma__parser__tests__expression_parser-63.snap
---
source: src/parser.rs
expression: "parse(\"a.b.c.d\")"

---
Input:

a.b.c.d

Result:

Node {
    start: 0,
    end: 7,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: PropAccess(
            Node {
                start: 0,
                end: 5,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: PropAccess(
                        Node {
                            start: 0,
                            end: 3,
                            line: 1,
                            column: 0,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: PropAccess(
                                    Node {
                                        start: 0,
                                        end: 1,
                                        line: 1,
                                        column: 0,
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                None,
                                                Identifier(
                                                    Node {
                                                        start: 0,
                                                        end: 1,
                                                        line: 1,
                                                        column: 0,
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 1,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ),
                                        },
                                    },
                                    Node {
                                        start: 2,
                                        end: 3,
                                        line: 1,
                                        column: 2,
                                        value: Identifier_ {
                                            name: SymbolU32 {
                                                value: 2,
                                            },
                                        },
                                    },
                                ),
                            },
                        },
                        Node {
                            start: 4,
                            end: 5,
                            line: 1,
                            column: 4,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ),
                },
            },
            Node {
                start: 6,
                end: 7,
                line: 1,
                column: 6,
                value: Identifier_ {
                    name: SymbolU32 {
                        value: 4,
                    },
                },
            },
        ),
    },
}
