src/snapshots/alma__parser__tests__expression_parser-64.snap
---
source: src/parser.rs
expression: "parse(\".b\")"

---
Input:

.b

Result:

Node {
    start: 0,
    end: 2,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: PropAccessLambda(
            Node {
                start: 1,
                end: 2,
                line: 1,
                column: 1,
                value: Identifier_ {
                    name: SymbolU32 {
                        value: 1,
                    },
                },
            },
        ),
    },
}
